<resources>
    <string name="app_name">CarRentalPro</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account? Register</string>
    <string name="name">Name</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_image">User Image</string>
    <string name="phone_number">Phone Number</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_car">Add New Car</string>
    <string name="car_image">Car Image</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="capacity">Capacity</string>
    <string name="price_per_hour">Price Per Hour</string>
    <string name="price_per_day">Price Per Day</string>
    <string name="new_car_image">New Car Image</string>
    <string name="add_car_image">Add Car Image</string>
    <string name="vin_number">VIN Number</string>
    <string name="add_new_user">Add New User</string>
    <string name="cars">Cars</string>
    <string name="users">Users</string>
    <string name="employees">Employees</string>
    <string name="reservations">Reservations</string>
    <string name="menu">Menu</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="add_new_category">Add New Category</string>
    <string name="logout">Logout</string>
    <string name="add_new_reservation">Add New Reservation</string>
    <string name="profile">Profile</string>
    <string name="reserve_car">Reserve Car</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_from_date_and_time">Select From Date and Time</string>
    <string name="select_to_date_and_time">Select To Date and Time</string>
    <string name="select_reservation_time">Select Reservation Time</string>
    <string name="price">Price</string>
    <string name="deposit">Deposit (Refundable) </string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="total">Total</string>
    <string name="calculated_price">Renting Cost</string>
    <string name="booked_by">Booked by : </string>
    <string name="booking_type">Booking Type</string>
    <string name="booking_cost">Booking Cost</string>
    <string name="log_out">Log Out</string>
</resources>
