<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/admin_item_view_cars"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/cars" />

    <item
        android:id="@+id/admin_item_view_users"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/users" />

    <item
        android:id="@+id/admin_item_view_employees"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/employees" />

    <item
        android:id="@+id/admin_item_view_reservations"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:title="@string/reservations" />

    <item
        android:id="@+id/admin_item_view_menu"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/menu" />
</menu>